Fix menu auto-close on iPad, fix double tap bug on ios

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -538,6 +538,19 @@ body {
           }
         }
 
+        // Needed to prevent doule tap bug for ios devices
+        @media (hover: none) {
+          &:hover {
+            background: transparent;
+            .btn-icon.hover {
+              display: none;
+            }
+            .btn-icon:not(.hover):not(.mobile) {
+              display: block;
+            }
+          }
+        }
+
         &:not(:last-child) {
           border-right: none; /* Prevent double borders */
         }
